First (second?) draft of the 'experiments' section

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -321,3 +321,23 @@
   publisher    = {Pearson},
   year         = {2020}
 }
+@inproceedings{DBLP:conf/aaai/SinglaD08,
+  author       = {Parag Singla and
+                  Pedro M. Domingos},
+  title        = {Lifted First-Order Belief Propagation},
+  booktitle    = {{AAAI}},
+  pages        = {1094--1099},
+  publisher    = {{AAAI} Press},
+  year         = {2008}
+}
+@inproceedings{DBLP:conf/uai/BroeckCD12,
+  author       = {Guy {Van den Broeck} and
+                  Arthur Choi and
+                  Adnan Darwiche},
+  title        = {Lifted Relax, Compensate and then Recover: From Approximate to Exact
+                  Lifted Probabilistic Inference},
+  booktitle    = {{UAI}},
+  pages        = {131--141},
+  publisher    = {{AUAI} Press},
+  year         = {2012}
+}
