--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -341,3 +341,12 @@
   publisher    = {{AUAI} Press},
   year         = {2012}
 }
+@misc{tóth2024complexityweightedfirstordermodel,
+      title={Complexity of Weighted First-Order Model Counting in the Two-Variable Fragment with Counting Quantifiers: A Bound to Beat},
+      author={Jan Tóth and Ondřej Kuželka},
+      year={2024},
+      eprint={2404.12905},
+      archivePrefix={arXiv},
+      primaryClass={cs.LO},
+      url={https://arxiv.org/abs/2404.12905},
+}
